# Dataviz

./: pyproject.toml
lit_practice/: main.py  main_hello.py  pyproject.toml
lit_practice/pages/: 서브페이지1❤️.py
데이터 시각화/: 2D지도시각화_follium.ipynb  3D지도시각화.ipynb  Altair_char.json  Matplotlib.ipynb  Seaborn.ipynb  pydeck_apt_polygon_2d.html  seoul_map.html  시각화(1).ipynb  시각화_2차_김수민_C221011.ipynb  시각화_Exam1_김수민_C221011.ipynb  시각화_Exam2_김수민_C221011.ipynb  시각화연습.ipynb  인터랙티브시각화_plotly.ipynb
데이터 시각화/data/: N3A_G0100000.json  final_data.csv  seoul_police_station.csv  경찰서.csv  등록인구.csv  아파트 매매 실거래가_2020_2024.csv  아파트실거래가_위도경도.csv  컬럼정리_아파트_매매_실거래가_2020_2024.csv  통합데이터.csv
