[project]
name = "dataviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "folium>=0.20.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kaleido>=1.1.0",
    "koreanize-matplotlib>=0.1.1",
    "mplcursors>=0.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "pydeck>=0.9.1",
    "seaborn>=0.13.2",
    "vega-datasets>=0.9.0",
]
